# qa_guru_python_10_19

./: .env.example  README.md  pyproject.toml
reqres_tests/: reqres_api.py  resource.py
tests/: conftest.py  test_login_form.py  test_operation_with_user.py  test_reqres_resource.py  test_users_info.py
utils/: reqres_api.py  validator_json.py
