[tool.poetry]
name = "qa-guru-python-10-19"
version = "0.1.0"
description = "Requests"
authors = ["Dimitri Maksimov <dmitry-maksimov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "2.31.0"
jsonschema = "4.21.1"
pytest = "8.1.1"
python-dotenv = "1.0.1"

[tool.pytest.ini_options]
addopts = "-s -v"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
